ApexWorkbook/src/objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Festival__c</fullName>
        <label>Festival</label>
        <referenceTo>Festival__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Source__c</fullName>
        <label>Purchase Source</label>
        <picklist>
            <picklistValues>
                <fullName>Box Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Official Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Ticket Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ticket_Type__c</fullName>
        <label>Ticket Type</label>
        <picklist>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Admission</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tickets_Purchased__c</fullName>
        <label>Tickets Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Spent__c</fullName>
        <formula>IF( ISPICKVAL(Ticket_Type__c, &apos;VIP&apos;) ,  Tickets_Purchased__c *100,  Tickets_Purchased__c *50)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Num_Tickets_Sold</fullName>
        <active>true</active>
        <errorConditionFormula>Tickets_Purchased__c  &gt; 8  ||  Tickets_Purchased__c  &lt; 1</errorConditionFormula>
        <errorMessage>Invalid number of tickets</errorMessage>
    </validationRules>
</CustomObject>